--- a/foundry.toml
+++ b/foundry.toml
@@ -5,6 +5,7 @@ libs = ["lib"]
 solc = "0.8.24"
 optimizer_runs = 10000000
 evm_version="cancun"
+fs_permissions = [{ access = "read", path = "./deployment-config"}]
 
 [fmt]
 bracket_spacing = true
